--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -1,7 +1,54 @@
+// --- CHAT ---
+.chatContainer {
+  height: 100%;
+  background-color: rgb(116, 255, 255);
+  // overflow-y: scroll;
+}
+
+// --- HEADER ---
+.singleChatHeader {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 9vh;
+  width: 100%;
+  background-color: rgb(67, 158, 67);
+}
+
+.backArrow {
+  width: 8%;
+  span {
+    color: whitesmoke;
+  }
+}
+
+.receiverImage {
+  width: 15%;
+}
+
+.receiverUsername {
+  width: 77%;
+  display: flex;
+  justify-content: left;
+  span {
+    margin-left: 10px;
+    color: whitesmoke;
+    font-weight: 600;
+  }
+}
+
+
+// --- THREAD ---
+.chatThread {
+  padding: 2% 3%;
+}
+
 .messageLine {
   width: fit-content;
   max-width: 80%;
-  margin-bottom: 5%;
+  margin: 15px 0 5px 0;
   padding: 1%;
   border-radius: 10px;
   span {
@@ -18,12 +65,37 @@
   color: rgb(126, 126, 126);
 }
 
-.sender {
+#sender {
   background-color: rgb(207, 255, 136);
   margin-left: auto; 
   margin-right: 0;
 }
 
-.receiver {
+#receiver {
   background-color: rgb(240, 255, 216);
+}
+
+#receiver + #receiver {
+  margin: 5px 0 5px 0;
+}
+
+#sender + #sender {
+  margin: 5px 0 5px 0;
+  margin-left: auto; 
+  margin-right: 0;  
+}
+
+.dateDisplay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  span {
+    background-color: rgb(234, 234, 234);
+    border-radius: 9px;
+    width: fit-content;
+    padding: 0 8px;
+    font-size: 0.8rem;
+    color: darkgrey;
+  }
+
 }
