--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -4,31 +4,75 @@ main {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  .appTitle {
-    h1 {
+  .welcome {
+    width: 80%;
+    height: 30%;
+    img {
+      position: relative;
+      top: 20%;
+      left: -45%;
+    }
+    p {
+      position: relative;
+      top: 15%;
+      left: -37%;
+      font-family: "Spectral";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 30;
+      line-height: 46px;
       color: #cb7862;
     }
   }
-  .introText {
-    display: flex;
-    align-items: center;
-    text-align: center;
+  .loginForm {
+    width: 80%;
+    height: 30%;
+    form {
+      position: relative;
+      top: 10%;
+      display: flex;
+      flex-direction: column;
+      label {
+        color: #e6dfcf;
+        text-align: left;
+      }
+      input {
+        height: 32px;
+        padding: 5px 8px;
+      }
+      button {
+      }
+    }
+  }
+  .passwordRecovery {
+    .link {
+      font-family: "Atkinson Hyperlegible";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 19px;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      text-decoration-line: underline;
+      color: #e6dfcf;
+    }
+  }
+  .alert {
     p {
       font-family: "Atkinson Hyperlegible";
       font-style: normal;
       font-weight: 400;
-      font-size: 18px;
-      line-height: 22px;
+      font-size: 14px;
+      line-height: 17px;
+      display: flex;
+      align-items: center;
+      text-align: center;
       color: #e6dfcf;
     }
   }
-  .startButton {
+}
 
-    button {
-      background-color: #ffffff;
-      border: 1px solid #cb7862;
-      border-radius: 1px;
-      color: #cb7862;
-    }
-  }
+.hidden {
+  display: none;
 }
