--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -1,5 +1,7 @@
+@import "../../colors";
+
 main {
-  background-color: #004368;
+  background-color: $darkbluemde;
   width: 100vw;
   height: 100vh;
   display: flex;
