--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -62,8 +62,8 @@ main {
         padding: 5px 8px;
         // font-size: 1rem;
       }
-      button {
-      }
+      // button {
+      // }
     }
   }
 }
