--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -1,73 +1,73 @@
-@import "../../colors";
+// @import "../../colors";
 
-main {
-  background-color: $darkbluemde;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  .welcome {
-    width: 80%;
-    height: 30%;
-    img {
-      position: relative;
-      top: 20%;
-      left: -45%;
-    }
-  }
-  .recoveryTitle {
+// main {
+//   background-color: $darkbluemde;
+//   width: 100vw;
+//   height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   .welcome {
+//     width: 80%;
+//     height: 30%;
+//     img {
+//       position: relative;
+//       top: 20%;
+//       left: -45%;
+//     }
+//   }
+//   .recoveryTitle {
 
-    p {
-      position: relative;
-      top: 15%;
-      left: -37%;
-      font-family: "Spectral";
-      font-style: normal;
-      font-weight: 700;
-      font-size: 30;
-      line-height: 46px;
-      color: #cb7862;
-    }
-  }
-  .pwRecoveryForm {
-    width: 80%;
-    height: 30%;
-    form {
-      position: relative;
-      top: 10%;
-      display: flex;
-      flex-direction: column;
-      .pwHeader {
-        display: flex;
-        label {
-          color: #e6dfcf;
-          text-align: left;
-        }
-        p {
-          position: relative;
-          right: -36%;
-          font-family: "Atkinson Hyperlegible";
-          font-style: normal;
-          font-weight: 400;
-          font-size: 14px;
-          line-height: 17px;
-          display: flex;
-          align-items: center;
-          text-align: center;
-          color: #e6dfcf;
-        }
-      }
-      input {
-        height: 32px;
-        padding: 5px 8px;
-        // font-size: 1rem;
-      }
-      // button {
-      // }
-    }
-  }
-}
+//     p {
+//       position: relative;
+//       top: 15%;
+//       left: -37%;
+//       font-family: "Spectral";
+//       font-style: normal;
+//       font-weight: 700;
+//       font-size: 30;
+//       line-height: 46px;
+//       color: #cb7862;
+//     }
+//   }
+//   .pwRecoveryForm {
+//     width: 80%;
+//     height: 30%;
+//     form {
+//       position: relative;
+//       top: 10%;
+//       display: flex;
+//       flex-direction: column;
+//       .pwHeader {
+//         display: flex;
+//         label {
+//           color: #e6dfcf;
+//           text-align: left;
+//         }
+//         p {
+//           position: relative;
+//           right: -36%;
+//           font-family: "Atkinson Hyperlegible";
+//           font-style: normal;
+//           font-weight: 400;
+//           font-size: 14px;
+//           line-height: 17px;
+//           display: flex;
+//           align-items: center;
+//           text-align: center;
+//           color: #e6dfcf;
+//         }
+//       }
+//       input {
+//         height: 32px;
+//         padding: 5px 8px;
+//         // font-size: 1rem;
+//       }
+//       // button {
+//       // }
+//     }
+//   }
+// }
 
-.hidden {
-  color: #004368 !important;
-}
+// .hidden {
+//   color: #004368 !important;
+// }
