--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -1,55 +1,73 @@
-main {
-  background-color: #004368;
+@import "../../colors";
+
+.main-container-welcome {
+  background-color: $creammde;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  .logoDiv {
-    height: 66%;
+
+  .logo-risky-people {
+    margin-top: 8%;
+
     img {
       position: relative;
-      top: 35%;
+      max-width: 303px;
+      max-height: 308px;
+    }
+  }
+
+  .logoDiv {
+    margin-top: 5%;
+    img {
+      position: relative;
       max-width: 341px;
       max-height: 308px;
     }
   }
+
   .appTitle {
-    height: 8%;
-    h1 {
+   margin-top: 19%;
+    img {
       position: relative;
-      top: 15%;
-      color: #cb7862;
-      margin: 0;
+      max-width: 341px;
+      max-height: 308px;
     }
   }
+
   .introText {
     height: 15%;
     width: 75%;
     display: flex;
     align-items: center;
     text-align: center;
+    margin-top: -6%;
+   
     p {
       position: relative;
-      top: -16%;
-      font-family: "Atkinson Hyperlegible";
+      font-family: $atkinsonmde;
       font-style: normal;
       font-weight: 400;
       font-size: 18px;
       line-height: 22px;
-      color: #e6dfcf;
+      color: $darkbluemde;
     }
   }
+
   .startButton {
     width: 75%;
-    height: 4.6%;
+    height: 4.5%;
+    margin-top: 2.5%;
+
     button {
       width: 100%;
       height: 100%;
-      background-color: #ffffff;
-      border: 1px solid #cb7862;
-      border-radius: 1px;
-      color: #cb7862;
+      background-color: $darkbluemde;
+      border: 1px solid $darkbluemde;
+      border-radius: 4px;
+      color: $creammde;
+      font-size: 16px;
     }
   }
 }
