--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -44,7 +44,7 @@
     text-align: center;
     margin-top: -6%;
    
-    p {
+    .p_introtext {
       position: relative;
       font-family: $atkinsonmde;
       font-style: normal;
