--- a/src/components/Password/Password.scss
+++ b/src/components/Password/Password.scss
@@ -1,73 +1,125 @@
-// @import "../../colors";
+@import "../../colors";
 
-// main {
-//   background-color: $darkbluemde;
-//   width: 100vw;
-//   height: 100vh;
-//   display: flex;
-//   flex-direction: column;
-//   .welcome {
-//     width: 80%;
-//     height: 30%;
-//     img {
-//       position: relative;
-//       top: 20%;
-//       left: -45%;
-//     }
-//   }
-//   .recoveryTitle {
+.main-cont-login {
+    background-color: $creammde;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: -2;
 
-//     p {
-//       position: relative;
-//       top: 15%;
-//       left: -37%;
-//       font-family: "Spectral";
-//       font-style: normal;
-//       font-weight: 700;
-//       font-size: 30;
-//       line-height: 46px;
-//       color: #cb7862;
-//     }
-//   }
-//   .pwRecoveryForm {
-//     width: 80%;
-//     height: 30%;
-//     form {
-//       position: relative;
-//       top: 10%;
-//       display: flex;
-//       flex-direction: column;
-//       .pwHeader {
-//         display: flex;
-//         label {
-//           color: #e6dfcf;
-//           text-align: left;
-//         }
-//         p {
-//           position: relative;
-//           right: -36%;
-//           font-family: "Atkinson Hyperlegible";
-//           font-style: normal;
-//           font-weight: 400;
-//           font-size: 14px;
-//           line-height: 17px;
-//           display: flex;
-//           align-items: center;
-//           text-align: center;
-//           color: #e6dfcf;
-//         }
-//       }
-//       input {
-//         height: 32px;
-//         padding: 5px 8px;
-//         // font-size: 1rem;
-//       }
-//       // button {
-//       // }
-//     }
-//   }
-// }
+    .a_logo {
+        position: absolute;
+        margin-top: 17%;
+        margin-left: -68%;
 
-// .hidden {
-//   color: #004368 !important;
-// }
+        img {
+            position: relative;
+        }
+    }
+
+    .points_up {
+        position: absolute;
+        margin-top: 23%;
+        margin-left: -66%;
+
+        img {
+            position: relative;
+        }
+    }
+
+    .forgot_message {
+        position: absolute;
+        margin-top: 88%;
+        font-family: $atkinsonmde;
+        font-weight: 700;
+        font-size: 22px;
+        color: $darkbluemde;
+    }
+
+    .div_forgotForm {
+        margin-top: 96%;
+        width: 80%;
+        position: absolute;
+
+        .forgot_form {
+            position: relative;
+            margin-top: 7%;
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+
+            .email_label_forgot {
+                color: $darkbluemde;
+                text-align: left;
+                font-size: 16px;
+                font-weight: 400;
+            }
+
+            .email_input_forgot {
+                margin-top: 4.5%;
+                height: 28px;
+                padding: 5px 8px;
+                border: 1px solid $orangemde;
+                border-radius: 4px;
+
+                &::placeholder {
+                    color: rgba(132, 124, 123, 0.5);
+                }
+            }            
+            
+            .submitForgot {
+                position: absolute;
+                width: 100%;
+                margin-top: 28%;
+                background-color: $darkbluemde;
+                height: 42px;
+                border: 1px solid $darkbluemde;
+                border-radius: 4px;
+                font-size: 16px;
+                color: $creammde
+            }
+        }
+    }
+    
+    .alert_hidden_forgot {
+        font-family: $atkinsonmde;
+        font-weight: 400;
+        font-size: 14px;
+        color: $darkbluemde;
+        margin-top: 132%;
+        width: 50%;
+        align-content: center;                   
+    }
+
+    .points_down {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+        margin-top: 180%;
+        margin-right: -1.5%;
+    }
+
+    .return_to_login_forgot {
+        display: flex;
+        flex-direction: row;
+        position: absolute;
+        width: 20%;
+        height: 30px;
+        gap: 6px;
+        margin-top: 195%;
+        font-size: 16px;
+        color: $darkbluemde;
+        text-decoration: none;
+        margin-left: -56%;
+        align-items: center;
+
+        .img_fech {
+            width: 12px;
+            height: 12px;
+        }
+    }
+
+}
