ChatList displays most recent messages first, correctly displays users info

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -7,7 +7,12 @@ $blackmde: #161616;
 $whitemde: #F8F8F8;
 $lightbluemde: #D3E3E3;
 $purplemde: #CFD0E4;
-$yellownde: #F3E3B3;
+$yellowmde: #F3E3B3;
+$lightorangemde: #F0AF9E;
+$backcolormde: #F2EEE7;
+$goldmde: #CBBA62;
+$redmde: #EC8F8F;
+$greenmde: #99D698;
 
 
 //Spectral 500 & 700 (weight)
