--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,8 +10,7 @@
   display: flex;
   justify-content: space-evenly;
   height: 76px;
-  // background-color: #ffffff;
-  background-color: beige;
+  background-color: #ffffff;
   .icon {
     margin-top: 22px;
     span {
