--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -2,13 +2,13 @@
 
 .contactsContainer {
   margin-top: 283px;
+  padding-bottom: 100px;
   background-color: $backcolormde;
   width: 100vw;
   min-height: 650px;
   .searchBarContainer {
     min-height: 151px;
-    // background-color: $backcolormde;
-    background-color: aqua;
+    background-color: $backcolormde;
     margin-top: 132px;
     position: fixed;
     left: 0;
@@ -63,6 +63,82 @@
           color: rgba(132, 124, 123, 0.5);
           padding-left: 10px;
         }
+      }
+    }
+  }
+  .contactsList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    .contactCard {
+      position: relative;
+      width: 190px;
+      height: 232px;
+      margin: 12px 0px 4px 15px;
+      background-color: $creammde;
+      border-radius: 4px;
+      .favourite {
+        position: absolute;
+        top: 10px;
+        right: 8px;
+        width: 28px;
+        height: 28px;
+        background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        // outline: inherit;
+        .favouriteButton {
+          width: 100%;
+          height: 100%;
+          color: $darkbluemde;
+        }
+      }
+      .contactImage {
+        margin-top: 19px !important;
+        width: 88px;
+        height: 88px;
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        img {
+          width: 88px;
+        }
+      }
+      .contactUsername {
+        margin-bottom: 5px;
+        font-family: $atkinsonmde;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        color: #3A3A3A;
+      }
+      .contactPosition {
+        margin-top: 5px;
+        margin-bottom: 20px;
+        font-family: $atkinsonmde;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: #3A3A3A;
+      }
+      .seeProfile {
+        width: 92px;
+        height: 30px;
+        background-color: $darkbluemde;
+        border: 1px solid $darkbluemde;
+        border-radius: 4px;
+        font-family: $atkinsonmde;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: $creammde;
       }
     }
   }
