--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,10 +8,38 @@
   text-align: center;
   z-index: 1000;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 132px;
   background-color: $darkbluemde;
-  h1 {
-    color: white;
+  .foldableMenuContainer {
+    .openFoldableButton {
+      position: relative;
+      top: 60px;
+      right: 115px;
+      background: none;
+      border: none;
+      padding: 0;
+      .hamburger {
+        color: white;
+        font-size: 40px;
+      }
+    }
+  }
+  .profileButtonContainer {
+    .profileLogoDiv {
+      position: relative;
+      top: 55px;
+      left: -25px;
+      background-color: $creammde;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 22px;
+      }
+    }
   }
 }
