--- a/src/components/Events/Events.scss
+++ b/src/components/Events/Events.scss
@@ -1,1 +1,29 @@
 @import "../../colors";
+
+.main_eventsContainer {
+    background-color: $backcolormde;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: -2;
+  
+    .events_top_header {
+      position: absolute;
+      margin-top: 32%;
+      display: flex;
+      flex-direction: row;
+      width: 88%;
+      align-items: center;
+      justify-content: space-between;
+  
+      .events_title {
+        font-family: $spectralmde;
+        font-weight: 800;
+        font-size: 28px;
+        color: $darkbluemde;
+      }
+  
+    }
+}
