--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -2,6 +2,7 @@
 $creammde: #E6DFCF;
 $orangemde: #CB7862;
 $darkbluemde: #004368;
+$lightbluemde: #D3E3E3;
 $graymde: #847C7B;
 $blackmde: #161616;
 $whitemde: #F8F8F8;
