--- a/src/components/Events/Events.scss
+++ b/src/components/Events/Events.scss
@@ -31,7 +31,7 @@
             align-items: center;
 
             column-gap: 10px;
-            ;
+            z-index: 1;
 
             .toolTipFather {
                 display: flex;
@@ -51,7 +51,7 @@
 
             .tooltipText {
                 font-family: $atkinsonmde;
-                font-weight: 200;
+                font-weight: 400;
                 font-size: 16px;
                 color: $darkbluemde;
                 margin-left: 10px;
@@ -65,7 +65,7 @@
         position: absolute;
         margin-top: 15%;
         left: 50%;
-        transform: translateX(60%);
+        transform: translateX(50%);
         z-index: 0;
     }
 
@@ -82,6 +82,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        z-index: 1;
         // height: 7vh;
     }
 }
