--- a/src/components/FoldableMenu/FoldableMenu.scss
+++ b/src/components/FoldableMenu/FoldableMenu.scss
@@ -15,13 +15,37 @@
   width: 340px;
   height: 830px;
   background-color: $darkbluemde;
-  .bulletList {
-    margin-top: 160px;
-    .closeFoldableButton {
-      background: none;
-
+  z-index: 2000;
+  .closeFoldableButton {
+    position: relative;
+    top: 20px;
+    right: 115px;
+    background: none;
+    border: none;
+    .closeIcon {
+      color: $creammde;
+      font-size: 40px;
     }
-
+  }
+  .bulletList {
+    margin-top: 100px;
+    li {
+      list-style-type: none;
+      text-align: left;
+      margin-bottom: 25px;
+      a {
+        font-family: $atkinsonmde;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 20px;
+        color: $creammde;
+        text-decoration: none;
+      }
+    }
+  }
+  .helpAndLogout {
+    margin-top: 300px;
     li {
       list-style-type: none;
       text-align: left;
@@ -30,7 +54,7 @@
         font-family: $atkinsonmde;
         font-style: normal;
         font-weight: 400;
-        font-size: 32px;
+        font-size: 24px;
         line-height: 20px;
         color: $creammde;
         text-decoration: none;
