--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,7 +20,7 @@
       border: none;
       padding: 0;
       .hamburger {
-        color: white;
+        color: $creammde;
         font-size: 40px;
       }
     }
