--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,39 +4,48 @@
 .main_homeContainer {
   background-color: $backcolormde;
   width: 100vw;
-  height: 100vh;
+  height: 30.8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: -2;
 
   .top_notices {
-    position: absolute;
-    margin-top: 32%;
+    position: fixed;
+    margin-top: 30.8%;
     display: flex;
     flex-direction: row;
-    width: 88%;
+    width: 100%;
+    height: 12.2vh;
     align-items: center;
     justify-content: space-between;
+    background-color: $backcolormde;
 
     .notices_title {
       font-family: $spectralmde;
       font-weight: 800;
       font-size: 28px;
       color: $darkbluemde;
+      padding-left: 6%;
+      margin-top: 3%;
+    }
+
+    .go_to_menu {
+      padding-right: 6%;
+      margin-top: -2%;
     }
 
   }
 
   .img_points_up_all {
-    position: absolute;
+    position: fixed;
     margin-top: 37%;
     left: 50%;
     transform: translateX(-50%);
   }
 
   .div_buttons_home {
-    position: absolute;
+    position: fixed;
     margin-top: 57%;
     display: flex;
     flex-direction: row;
@@ -67,12 +76,14 @@
     }
   }
 
+
   .navigation_homeContainer {
-    background-color: aqua;
     position: absolute;
     margin-top: 66.7%;
-    height: 61vh;
     width: 100%;
+    height: 61vh;
+    max-height: 61vh;
+    background-color: $backcolormde;
+    z-index: -1;
   }
-
 }
