--- a/src/components/TabNotices/TabNotices.scss
+++ b/src/components/TabNotices/TabNotices.scss
@@ -1,13 +1,13 @@
 @import "../../colors";
 
-.scroll_div_notices {
+.scroll_div_notices_tab {
     height: 61.7vh;
     overflow: auto;
 
-    .main_notice_box {
+    .main_notice_box_tab {
         margin-bottom: 4%;
 
-        .img_notice_box {
+        .img_notice_box_tab {
             max-width: 100%;
             max-height: 292px;
         }
@@ -20,7 +20,7 @@
             justify-content: center;
             height: 6vh;
 
-            .all_buttons_notice {
+            .all_buttons_notice_tab {
                 display: flex;
                 flex-direction: row;
                 align-content: center;
@@ -28,23 +28,23 @@
                 justify-content: space-between;
                 margin-top: 1.5%;
 
-                .rest_button_notices {
+                .rest_button_notices_tab {
                     display: flex;
                     width: 30%;
                     justify-content: space-between;
 
-                    .add_notices_button {
+                    .add_notices_button_tab {
                         width: 20px;
                         height: 20px;
                     }
 
-                    .share_notices_button {
+                    .share_notices_button_tab {
                         margin-top: -3%;
                         width: 21px;
                         height: 26px;
                     }
 
-                    .like_notices_button {
+                    .like_notices_button_tab {
                         width: 28.5px;
                         height: 26px;
                     }
@@ -52,16 +52,16 @@
             }
         }
 
-        .text_notices_content {
+        .text_notices_content_tab {
             background-color: $backcolormde;
 
-            .all_text_content_notices {
+            .all_text_content_notices_tab {
                 width: 89%;
                 margin: 0 auto;
                 display: flex;
                 flex-direction: column;
 
-                .text_agora_notices {
+                .text_agora_notices_tab {
                     font-family: $atkinsonmde;
                     font-size: 16px;
                     text-align: left;
@@ -79,7 +79,7 @@
                     }
                 }
 
-                .view_more_button {
+                .view_more_button_tab {
                     display: flex;
                     align-items: center;
                     font-family: $atkinsonmde;
@@ -91,7 +91,7 @@
                     height: 20px;
 
 
-                    .expander_button {
+                    .expander_button_tab {
                         height: 24px;
                         width: 50px;
                         margin-left: 86%;
@@ -100,7 +100,7 @@
                     }
                 }
 
-                .view_comments_button {
+                .view_comments_button_tab {
                     font-family: $atkinsonmde;
                     font-size: 14px;
                     text-align: left;
@@ -111,4 +111,41 @@
             }
         }
     }
+
+}
+.Popup_add_Notices_tab {
+    position: fixed;
+    background-color: $orangemde;
+    height: 220px;
+    margin-top: -52.2%;
+    z-index: 3;
+
+    .icon_close_notices_white_tab {
+        margin-top: 4%;
+        margin-right: -86%;
+    }
+
+    .title_popup_add_notices_tab {
+        width: 84%;
+        margin: 0 auto;
+        margin-top: 6%;
+
+        .main_popup_text_tab {
+            font-family: $atkinsonmde;
+            font-size: 18px;
+            line-height: 20px;
+            color: white;
+        }
+        
+    }
+    .email_add_notices_tab{
+        .email_popup_text_tab{
+            font-family: $atkinsonmde;
+            font-size: 18px;
+            line-height: 20px;
+            color: white;
+            font-weight: bold;
+        }
+    }
+
 }
