--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -29,16 +29,16 @@
     .profileLogoDiv {
       position: relative;
       top: 55px;
-      left: -25px;
-      background-color: $creammde;
+      left: -25px;      
       width: 50px;
       height: 50px;
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      img {
-        width: 22px;
+      .img_profile_header {
+        width: 55px;
+        height: 55px;
       }
     }
   }
