--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -10,42 +10,41 @@
 
   .logo-risky-people {
     margin-top: 8%;
-
-    img {
-      position: relative;
-      max-width: 303px;
-      max-height: 308px;
-    }
-  }
-
-  .logoDiv {
-    margin-top: 5%;
-    img {
-      position: relative;
-      max-width: 341px;
-      max-height: 308px;
-    }
-  }
-
-  .appTitle {
-   margin-top: 19%;
-    img {
-      position: relative;
-      max-width: 341px;
-      max-height: 308px;
-    }
-  }
-
-  .introText {
-    height: 15%;
-    width: 75%;
     display: flex;
-    align-items: center;
-    text-align: center;
-    margin-top: -6%;
-   
-    .p_introtext {
-      position: relative;
+    justify-content: center;
+
+    .logo-risky-people_img {
+      position: absolute;
+    }
+  }
+
+  .logoDiv_welcome {
+    margin-top: 40%;
+    display: flex;
+    justify-content: center;
+
+    .welcome_hands {
+      position: absolute;
+
+    }
+  }
+
+  .appTitle_welcome {
+    position: absolute;
+    margin-top: 153%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .introText_welcome {
+    position: absolute;
+    width: 80%;
+    margin-top: 161%;
+    display: flex;
+    justify-content: center;
+
+
+    .p_introtext_welcome {
       font-family: $atkinsonmde;
       font-style: normal;
       font-weight: 400;
@@ -55,12 +54,12 @@
     }
   }
 
-  .startButton {
-    width: 75%;
+  .startButton_welcome {
+    width: 80%;
     height: 4.5%;
-    margin-top: 2.5%;
+    margin-top: 145%;
 
-    button {
+    .button_welcome {
       width: 100%;
       height: 100%;
       background-color: $darkbluemde;
