--- a/src/components/Events/Events.scss
+++ b/src/components/Events/Events.scss
@@ -10,13 +10,18 @@
     z-index: -2;
 
     .events_top_header {
-        position: absolute;
-        margin-top: 32%;
+        // position: absolute;
+        position: fixed;
+        margin-top: 30.8%;
         display: flex;
         flex-direction: row;
-        width: 88%;
+        width: 100%;
+        margin-left: 6%;
+        margin-right: 6%;
         align-items: baseline;
-        justify-content: space-between;
+        justify-content: space-around;
+        // z-index: 1;
+        background-color: $backcolormde;
 
         .events_title {
             font-family: $spectralmde;
@@ -31,7 +36,7 @@
             align-items: center;
 
             column-gap: 10px;
-            z-index: 1;
+            // z-index: 2;
 
             .toolTipFather {
                 display: flex;
@@ -62,11 +67,11 @@
     }
 
     .img_points_white {
-        position: absolute;
+        position: fixed;
         margin-top: 15%;
         left: 50%;
         transform: translateX(50%);
-        z-index: 0;
+        
     }
 
     .tooltipTextContainer {
@@ -76,13 +81,14 @@
         background-color: $lightbluemde;
         border-radius: 0.6rem;
         height: 4.5vh;
+        // z-index: 2;
     }
 
     .go_to_calendar {
         display: flex;
         flex-direction: row;
         align-items: center;
-        z-index: 1;
+        z-index: 2;
         // height: 7vh;
     }
 }
