--- a/src/components/Events/Events.scss
+++ b/src/components/Events/Events.scss
@@ -3,7 +3,7 @@
 .main_eventsContainer {
     background-color: $backcolormde;
     width: 100vw;
-    height: 100vh;
+    // height: 200vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,11 +66,12 @@
         }
     }
 
-    .img_points_white {
+    .div_img_points {
         position: fixed;
-        margin-top: 15%;
+        margin-top: -15%;
         left: 50%;
         transform: translateX(50%);
+        z-index: 1;
         
     }
 
@@ -81,7 +82,7 @@
         background-color: $lightbluemde;
         border-radius: 0.6rem;
         height: 4.5vh;
-        // z-index: 2;
+        z-index: 2;
     }
 
     .go_to_calendar {
