--- a/src/components/NavigationEvents/NavigationEvents.scss
+++ b/src/components/NavigationEvents/NavigationEvents.scss
@@ -7,72 +7,152 @@
     flex-direction: column;
     margin-top: 250px;
     width: 92vw;
-    height: 80vh;
+    // height: 300vh;
+
+    .eventRecomendFixed {
+        width: 100%;
+        border-radius: 10px;
+        display: block;
+        padding-top: 65%;
+        background-image: url('/src/images/Event_UpFixed.png');
+        background-size: contain;
+        background-position: center;
+    }
+
+
+
+    .sideText {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        font-family: $spectralmde;
+        font-weight: 600;
+        font-size: 17px;
+        color: $darkbluemde;
+        margin-bottom: -3px;
+        margin-top: 25px;
+    }
+
+
+    .eventSideScroll {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: flex-start;
+        overflow-x: auto;
+        padding-bottom: 20px;
+        max-height: 20vh;
+
+
+
+        .eventSideArray {
+            display: flex;
+            flex-direction: row;
+            align-content: flex-start;
+            max-height: 20vh;
+            column-gap: 10px;
+
+
+            .eventside1 {
+                border-radius: 10px;
+                flex: 1;
+                width: 80vw;
+                height: 20vh;
+                background-size: cover;
+                background-position: center;
+                background-image: url('/src/images/Ev_recom_1.png');
+            }
+
+            .eventside2 {
+                border-radius: 10px;
+                flex: 1;
+                width: 300px;
+                height: 20vh;
+                background-size: cover;
+                background-position: center;
+                background-image: url('/src/images/Ev_recom_2.png');
+            }
+
+            .eventside3 {
+                border-radius: 10px;
+                flex: 1;
+                width: 30wh;
+                height: 20vh;
+                background-size: cover;
+                background-position: center;
+                background-image: url('/src/images/Ev_recom_3.png');
+            }
+        }
+
+    }
+
+
+    .eventDownText {
+        display: flex;
+        flex-direction: column;
+
+        .downText {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            font-family: $spectralmde;
+            font-weight: 600;
+            font-size: 17px;
+            color: $darkbluemde;
+            margin-top: 5px;
+        }
+    }
+
+
+    .eventList_Down {
+        margin-top: -15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        row-gap: 10px;
+
+        .eventDown1 {
+            display: flex;
+            flex-shrink: 1;
+            border-radius: 10px;
+            width: 100%;
+            background-image: url('/src/images/Event_Down_1.png');
+            background-size: auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 33vh;
+        }
+        
+        .eventDown2 {
+            display: flex;
+            flex-shrink: 1;
+            border-radius: 10px;
+            width: 100%;
+            background-image: url('/src/images/Event_Down_2.png');
+            background-size: auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 33vh;
+        }
+        
+        .eventDown3 {
+            display: flex;
+            flex-shrink: 1;
+            border-radius: 10px;
+            width: 100%;
+            background-image: url('/src/images/Event_Down_3.png');
+            background-size: auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 33vh;
+        }
+    }
 }
 
-.eventRecomendFixed {
-    width: 100%;
-    height: vh;
-    border-radius: 15px;
-    display: block;
-    padding-top: 65%;
-    background-image: url('/src/images/Event_UpFixed.png');
-    background-size: contain;
-    background-position: center;
-}
 
 
-.eventSideScroll {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    overflow-x: auto;
-}
 
-.sideText {
-    align-self: flex-end;
-    font-family: $spectralmde;
-    font-weight: 600;
-    font-size: 17px;
-    color: $darkbluemde;
-}
 
-.eventSideArray {
-    // overflow-x: scroll;
-    // white-space: nowrap;
-    // height: 100%;
-    display: flex;
-    flex-direction: row;
-    // width: fit-content;
 
-}
 
-.eventside1 {
-    flex-shrink: 0;
-    width: 300px;
-    height: 200px;
-    margin-right: 10px;
-    background-size: cover;
-    background-position: center;
-    background-image: url('/src/images/Ev_recom_1.png');
-}
-
-.eventside2 {
-    flex-shrink: 0;
-    width: 300px;
-    height: 200px;
-    margin-right: 10px;
-    background-size: cover;
-    background-position: center;
-    background-image: url('/src/images/Ev_recom_2.png');
-}
-
-.eventside3 {
-    flex-shrink: 0;
-    width: 300px;
-    height: 200px;
-    margin-right: 10px;
-    background-size: cover;
-    background-position: center;
-    background-image: url('/src/images/Ev_recom_3.png');
-}
