updated style of ChatList

--- a/src/components/ChatList/ChatList.scss
+++ b/src/components/ChatList/ChatList.scss
@@ -1,9 +1,51 @@
 @import "../../colors";
 
+.chatListContainer {
+  background-color: $backcolormde;
+}
+
 .chatListTitleContainer {
   margin-top: 132px;
   background-color: $backcolormde;
   height: 116px;
+  position: relative;
+  p {
+    position: absolute;
+    top: 10px;
+    left: 35px;
+    font-family: $spectralmde;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 40px;
+    color: $darkbluemde;
+  }
+  .pointsImage {
+    position: absolute;
+    top: -25px;
+    left: 310px;
+  }
+}
+
+.switchingButtonsContainer {
+  button {
+    border: none;
+    width: 50%;
+    height: 43px;
+    font-family: $atkinsonmde;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 19px;
+  }
+  .single {
+    background-color: $darkbluemde;
+    color: $creammde;
+  }
+  .group {
+    background-color: $creammde;
+    color: $darkbluemde;
+  }
 }
 
 .chatListDiv {
@@ -45,10 +87,18 @@
         .rightTime {
           text-align: right;
           margin-right: 20px;
+          font-family: $atkinsonmde;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          color: $graymde;
         }
       }
       p {
         text-align: left;
+      }
+      .firstRowOfMessage {
+        color: red;
       }
     }
   }
