--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -5,6 +5,7 @@
   padding-bottom: 100px;
   background-color: $backcolormde;
   min-height: 740px;
+  width: 435px;
   .imageContainer {
     height: 250px;
 
