--- a/src/components/NavigationEvents/NavigationEvents.scss
+++ b/src/components/NavigationEvents/NavigationEvents.scss
@@ -146,6 +146,7 @@
             background-position: center;
             background-repeat: no-repeat;
             height: 33vh;
+            margin-bottom: 30%;
         }
     }
 }
