modify Profile text

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -7,8 +7,7 @@
   min-height: 740px;
   width: 435px;
   .imageContainer {
-    height: 250px;
-
+    height: 180px;
     .profileImageContainer {
       position: relative;
       top: -100px;
@@ -25,6 +24,26 @@
       img {
         width: 188px;
       }
+    }
+  }
+  .gamingContainer {
+    .totalPoints {
+      color: $darkbluemde;
+      font-family: $atkinsonmde;
+      font-weight: 700;
+      font-size: 22px;
+      margin: 10px 0 0px 0;
+    }
+    .howTo {
+      font-family: $atkinsonmde;
+      font-weight: 400;
+      font-size: 13px;
+      color: #847c7b;
+      margin-top: 0px;
+      margin-bottom: 25px;
+    }
+    .progressBar {
+      margin-bottom: 10px;
     }
   }
   .profileInfoContainer {
